Fixed z-index sidebar at max
Close #1679

--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -154,7 +154,7 @@ $base-font-size: 14px;
   position: fixed;
   top: 0;
   left: 100%;
-  z-index: 10000;
+  z-index: 2147483638;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
   &.annotator-collapsed {
